  empty that will be used instead of defaulting to value from context or
  web parameters

Bug Fixes:

- Fixed URLs for Mantle UBPL links using active screen URL as the default
  base URL instead of the full URL of the current screen
- Fixed issue where form-list-column and field-layout nodes in an extended
  screen modified the original node from the base screen

===========================================================================
Release 1.2.0 - 30 Dec 2012
===========================================================================

Moqui Framework release 1.2.0 is a minor new feature release and a major
quality improvement release. This release has undergone significantly more
testing than previous releases because of a wider variety of functionality
that has now been built and tested using the framework, and because of a
unit testing effort (framework unit tests built using Spock).

The new features include popup menus (using the new jQueryUI menu widget),
dynamic-options in XML Form drop-downs with dependency on other fields,
automatic optimization of queries on view-entities to old select member
entities necessary, support for UUID generated primary keys, expanded JCR
support and an Example Content screen, and a number of small improvements
that generally make the framework easier to use and more reliable.

There are some non-backward-compatible changes in this release including
elimination of id-very-long from the data type dictionary (expanding the id
and id-long types), change to database configuration of subscreens to be
based on UserGroup instead of the individual UserAccount (this is a
primary-key change and may require a database metadata update and data
migration), and context isolation for service calls.

This release includes:

- Updated jQuery to 1.8.3 and jQuery UI to 1.9.2
- Updated Apache Camel to 2.10.1, Apache Derby to 10.9.1.0, Apache
  Jackrabbit to 2.5.2, Apache Shiro to 1.2.1, ehcache to 2.6.0, Groovy to